--- a/src/App.css
+++ b/src/App.css
@@ -173,6 +173,11 @@ header button.rounded-circle:hover svg{
   width: 20%;
   flex: 0 0 20%;
   transition: all 0.3s ease-in-out;}
+
+.main .sidebarWrapper.toggle{
+  width: 0%;
+  flex: 0 0 0%;}
+
 .main .sidebarWrapper .sidebar{
   width: 20%;
   max-height: calc(100vh - 10px);
@@ -182,7 +187,12 @@ header button.rounded-circle:hover svg{
   left: 0px;
   background: #fff;
   overflow-y: scroll;
-  overflow-x: hidden;}
+  overflow-x: hidden;
+  transition: all 0.3s ease-in-out;}
+
+.main .sidebarWrapper.toggle .sidebar{
+  left: -100%;}
+
 .main .sidebarWrapper .sidebar::-webkit-scrollbar{
   width: 3px !important;}
 .main .sidebarWrapper .sidebar::-webkit-scrollbar-thumb{
@@ -330,9 +340,15 @@ header button.rounded-circle:hover svg{
 
 .main .content{
   width: 80%;
-  flex: 0 0 80%;}
+  flex: 0 0 80%;
+  transition: all 0.3s ease-in-out;}
+.main .content.toggle{
+  width: 100%;
+  flex: 0 0 100%;}
+
 .right-content{
-  padding: 90px 30px;}
+  padding: 90px 30px;
+  padding-bottom: 10px;}
 
 .dashboardBoxWrapper{
   gap: 20px;
