--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,8 @@
 
 body{
   font-family: "Open Sans", sans-serif !important;
-  background: #ebe9e9;}
+  background: #ebe9e9;
+  overflow-x: hidden;}
 
 ::-webkit-scrollbar{
   width: 5px !important;
@@ -172,7 +173,7 @@ header button.rounded-circle:hover svg{
 .main .sidebarWrapper{
   width: 20%;
   flex: 0 0 20%;
-  transition: all 0.3s ease-in-out;}
+  transition: all 0.3s;}
 
 .main .sidebarWrapper.toggle{
   width: 0%;
@@ -188,7 +189,7 @@ header button.rounded-circle:hover svg{
   background: #fff;
   overflow-y: scroll;
   overflow-x: hidden;
-  transition: all 0.3s ease-in-out;}
+  transition: all 0.3s;}
 
 .main .sidebarWrapper.toggle .sidebar{
   left: -100%;}
@@ -341,7 +342,7 @@ header button.rounded-circle:hover svg{
 .main .content{
   width: 80%;
   flex: 0 0 80%;
-  transition: all 0.3s ease-in-out;}
+  transition: all 0.3s;}
 .main .content.toggle{
   width: 100%;
   flex: 0 0 100%;}
