--- a/src/App.css
+++ b/src/App.css
@@ -30,6 +30,11 @@ body{
 .btn-round{
   border-radius: 30px !important;}
 
+.full{
+  max-width: 100% !important;
+  flex: 0 0 100% !important;
+  width: 100% !important;}
+
 header{
   width: 100%;
   height: 70px;
