--- a/src/App.css
+++ b/src/App.css
@@ -35,6 +35,9 @@ body{
   flex: 0 0 100% !important;
   width: 100% !important;}
 
+h1, h2, h3, h4, h5, h6, p {
+  color: #403e57;}
+
 header{
   width: 100%;
   height: 70px;
@@ -154,8 +157,7 @@ header button.rounded-circle:hover svg{
   padding: 10px 0px;}
 .dropdown_list .head h4{
   font-size: 17px;
-  font-weight: 600;
-  color: #403e57;}
+  font-weight: 600;}
 .dropdown_list .scroll{
   max-height: 300px;
   overflow-y: scroll;
@@ -527,8 +529,7 @@ header button.rounded-circle:hover svg{
 .cardFilters h4{
   font-size: 14px;
   font-weight: 600;
-  text-transform: capitalize;
-  color: #403e57;}
+  text-transform: capitalize;}
 
 .table-responsive::-webkit-scrollbar-thumb{
   background: #ccc !important;}
@@ -593,10 +594,50 @@ table td .new, table td .old {
 .tableFooter p{
   font-size: 14px;
   font-weight: 500;
-  margin-bottom: 0px;
-  color: #403e57;}
+  margin-bottom: 0px;}
 
 .loginSection{
   width: 100%;
   height: 100vh;
-  padding: 35px 25px;}
+  padding: 35px 25px;
+  background: #fff;
+  position: relative;}
+
+.loginPatern{
+  width: 100%;
+  height: 100%;
+  opacity: 0.1;
+  position: fixed;
+  top: 0px;
+  left: 0px;
+  z-index: 99;
+  pointer-events: none;}
+
+.loginSection .loginBox{
+  width: 350px;
+  height: auto;
+  margin: auto;}
+.loginSection .loginBox .wrapper{
+  width: 100%;
+  height: 410px;
+  background: #f0f0f0;
+  position: relative;
+  z-index: 100;}
+
+.loginSection .loginBox .wrapper .form-control{
+  background: #fff;
+  box-shadow: none;
+  outline: none;
+  border-radius: 8px;
+  font-size: 14px;
+  font-weight: 600;
+  height: 45px;
+  padding-left: 40px;}
+.loginSection .loginBox .wrapper .form-control:focus{
+  border: 1px solid #0858f7;}
+.loginSection .loginBox .wrapper .icon{
+  position: absolute;
+  top: 3px;
+  left: 10px;
+  z-index: 100;
+  font-size: 25px;}
