--- a/src/App.css
+++ b/src/App.css
@@ -23,10 +23,13 @@ body{
   font-size: 14px !important;
   font-weight: 600 !important;
   color: #fff !important;
-  border-radius: 5px !important;
+  border-radius: 8px !important;
   text-transform: capitalize !important;} 
 .btn-lg{
   padding: 6px 20px !important;}
+.btn-big{
+  padding: 10px 25px !important;
+  font-size: 14px !important;}
 .btn-round{
   border-radius: 30px !important;}
 
@@ -622,7 +625,8 @@ table td .new, table td .old {
   height: 410px;
   background: #f0f0f0;
   position: relative;
-  z-index: 100;}
+  z-index: 100;
+  padding: 35px;}
 
 .loginSection .loginBox .wrapper .form-control{
   background: #fff;
@@ -644,4 +648,13 @@ table td .new, table td .old {
   z-index: 100;
   font-size: 23px;}
 .loginSection .loginBox .wrapper .form-group .icon svg{
+  color: #5e5d72;}
+
+.toggleShowPassword{
+  position: absolute;
+  top: 10px;
+  right: 8px;
+  cursor: pointer;}
+.toggleShowPassword svg{
+  font-size: 22px;
   color: #5e5d72;}
