--- a/src/App.css
+++ b/src/App.css
@@ -97,8 +97,21 @@ body.dark .searchBox input,body.dark .searchBox input::-webkit-input-placeholder
   color: rgba(255,255,255,0.7);}
 body.dark .logo span{
   color: #ffffffe6;}
-body.dark .myAcc .userInfo * {
+body.dark .myAcc .userInfo *,body.dark .dropdown_list .head h4{
+  color: rgba(255, 255, 255, 0.8) !important;}
+body.dark .MuiPaper-elevation{
+  background-color: #12254e;}
+body.dark .MuiPaper-elevation li *,body.dark .MuiPaper-elevation li{
   color: rgba(255, 255, 255, 0.8);}
+body.dark .dropdown_list li.MuiButtonBase-root{
+  background-color: #12254e !important;
+  background: #12254e !important;}
+body.dark .main .sidebarWrapper .sidebar {
+  background: #112143;}
+body.dark .main .sidebarWrapper .sidebar ul li button {
+  color: #fffc !important;}
+body.dark .main .sidebarWrapper .sidebar ul li button.active {
+  background: #ffffff1a !important;}
 
 .searchBox{
   width: 450px;
