--- a/src/App.css
+++ b/src/App.css
@@ -153,8 +153,7 @@ body.dark table th,
 body.dark table td { border-color: #ffffff33; }
 body.dark table td { color: #ffffff85 !important; }
 body.dark tbody tr:nth-child(odd) { background-color: #16223e; }
-body.dark .pagination *,
-body.dark .link { color: #fff9 !important; }
+body.dark .pagination *{ color: #fff9 !important; }
 body.dark .MuiPaginationItem-root:hover { background: #fff3 !important; }
 body.dark .table-responsive::-webkit-scrollbar-thumb { background: #606b83 !important; }
 body.dark table tbody .actions button svg { color: #fff !important; }
@@ -166,6 +165,8 @@ body.dark form .form-control { background: #071739 !important; border: 1px solid
 body.dark .loginSection .loginBox .wrapper .form-control:focus { border: 1px solid #0858f7 !important; }
 body.dark .loginSection .loginBox .wrapper .or span.line { background: #ffffff4d !important; }
 body.dark .loginSection .loginBox .wrapper .or span.txt { border: 1px solid #ffffff4d; color: #ffffff80 !important; }
+.link.color, .link:hover {
+  color: #0858f7 !important;}
 
 .searchBox{
   width: 450px;
