--- a/src/App.css
+++ b/src/App.css
@@ -143,8 +143,7 @@ body.dark h5,
 body.dark h6,
 body.dark p { color: rgba(255, 255, 255, 0.938) !important; }
 body.dark .notfound-page h2, 
-body.dark .notfound-page p{
-  color: #24292f !important;}
+body.dark .notfound-page p{ color: #24292f !important;}
 body.dark .card,
 body.dark .signUpSection .loginBox { background: #1b2b4d !important; }
 body.dark .signUpSection .card { border: transparent !important; }
@@ -167,11 +166,12 @@ body.dark .loginSection { background: #112142 !important; }
 body.dark form .form-control { background: #071739 !important; border: 1px solid #ffffff1a !important; color: #ffffffb3 !important; }
 body.dark .loginSection .loginBox .wrapper .form-control:focus { border: 1px solid #0858f7 !important; }
 body.dark .loginSection .loginBox .wrapper .or span.line { background: #ffffff4d !important; }
+body.dark .link { color: #fff9;}
 body.dark .loginSection .loginBox .wrapper .or span.txt { border: 1px solid #ffffff4d; color: #ffffff80 !important; }
+body.dark .breadcrumb-link { background-color: #112143; color: #bfced3 !important;}
+body.dark .breadcrumb-current { background-color: #112143; color: #c0d0d4 !important;}
 .link.color, .link:hover {
   color: #0858f7 !important;}
-body.dark .link {
-  color: #fff9;}
 
 .searchBox{
   width: 450px;
@@ -820,9 +820,28 @@ table td .new, table td .old {
   gap: 20px;
   width: 100%;
   flex-wrap: wrap;}
+
 .full-width-dashboardBoxWrapper .dashboardBoxWrapper .dashboardBox{
   width: 100% !important;
   height: 120px !important;}
 .full-width-dashboardBoxWrapper .dashboardBoxWrapper .dashboardBox .chart{
   opacity: 0.005;
   top: 10px;}
+
+.breadcrumb-link {
+  font-size: 15px !important;
+  font-weight: 550 !important;
+  background-color: #f5f5f5;
+  padding: 7px 13px;
+  border-radius: 16px;
+  text-decoration: none !important;}
+.breadcrumb-current {
+  font-size: 13px !important;
+  font-weight: 600 !important;
+  background-color: #f5f5f5;
+  padding: 8px 13px !important;
+  border-radius: 16px;
+  cursor: pointer;}
+.breadcrumb-link svg{
+  font-size: 17px;
+  margin-top: -5px;}
