--- a/src/App.css
+++ b/src/App.css
@@ -870,6 +870,20 @@ table td .new, table td .old {
 .sliderBig *, .sliderSml * {
   transition: all 0.2s !important;}
 
+.thumbnail-item {
+  padding: 4px;
+  border: 2px dashed #999;
+  border-radius: 6px;
+  transition: none !important;}
+.thumbnail-item.active {
+  border: 2px dashed #007bff !important;
+  box-shadow: none;}
+
+body.dark .thumbnail-item {
+  border: 2px dashed #555;}
+body.dark .thumbnail-item.active {
+  border: 2px dashed #00bfff !important;
+  box-shadow: none;}
 .productDetailsSEction .productInfo .icon {
   flex: 0 0 28%;
   width: 28%;}
@@ -885,22 +899,22 @@ body.light .productDetailsSEction .productInfo .icon svg {
   color: #5e5d72 !important;}
 .productDetailsSEction .productInfo .row {
   margin-bottom: 10px !important;}
+.productDetailsSEction .productInfo .row .col-sm-9{
+  display: flex;
+  align-items: center;}
 .productDetailsSEction .productInfo .row .col-sm-9 span {
   font-size: 15px;
   opacity: .8;
   padding-left: 20px;}
 
-.thumbnail-item {
-  padding: 4px;
-  border: 2px dashed #999;
-  border-radius: 6px;
-  transition: none !important;}
-.thumbnail-item.active {
-  border: 2px dashed #007bff !important;
-  box-shadow: none;}
+.productDetailsSEction .productInfo .row .col-sm-9 span .row, .tags {
+  margin-bottom: 0 !important;}
 
-body.dark .thumbnail-item {
-  border: 2px dashed #555;}
-body.dark .thumbnail-item.active {
-  border: 2px dashed #00bfff !important;
-  box-shadow: none;}
+.tags li span{
+  display: flex !important;
+  align-items: center !important;
+  justify-content: center !important;
+  background: #121d37;
+  border-radius: 5px;
+  font-size: 12px !important;
+  padding: 3px 10px !important;}
