--- a/src/App.css
+++ b/src/App.css
@@ -157,7 +157,7 @@ body.dark .card,
 body.dark .signUpSection .loginBox { background: #1b2b4d !important; }
 body.dark .signUpSection .card { border: transparent !important; }
 body.dark .card { border: 1px solid #10214b !important; transition: background-color 0.2s ease; }
-body.dark .dropdown-select { background: transparent !important; border: 1px solid rgba(228, 218, 218, 0.603) !important; color: #fffc; }
+body.dark .dropdown-select { background: transparent !important; border: 2px solid rgba(228, 218, 218, 0.603) !important; color: #fffc; }
 body.dark .dropdown-menu { background: #12254e !important; border: none !important; }
 body.dark table,
 body.dark table th,
@@ -180,6 +180,7 @@ body.dark .loginSection .loginBox .wrapper .or span.txt { border: 1px solid #fff
 body.dark .breadcrumb-link { background-color: #112143; color: #bfced3 !important;}
 body.dark .breadcrumb-current { background-color: #112143; color: #c0d0d4 !important;}
 body.dark .productDetailsSEction .productInfo .name { color: #fffc !important;}
+body.dark .tags li span{ background: #121d37; padding: 3px 10px !important;}
 .link.color, .link:hover {
   color: #0858f7 !important;}
 
@@ -555,7 +556,7 @@ body.dark .productDetailsSEction .productInfo .name { color: #fffc !important;}
   align-items: center;
   justify-content: space-between;
   padding: 8px 12px;
-  border: 1px solid #ccc;
+  border: 2px solid #ccc;
   cursor: pointer;
   background: #fff;
   border-radius: 4px;
@@ -565,11 +566,10 @@ body.dark .productDetailsSEction .productInfo .name { color: #fffc !important;}
 .dropdown-select.placeholder {
   font-style: italic;}
 .dropdown-select:hover {
-  border-color: #000;}  
+  border-color: #000;}
 .custom-dropdown-wrapper.open .dropdown-select {
-  border-color: #1976d2;
-  border-width: 2px;
-  transition: 0s;}
+  border-color: #1976d2 !important;
+  transition: 0s !important;}
 .dropdown-icon {
   font-size: 25px;
   color: #757575;}
@@ -916,9 +916,6 @@ body.light .productDetailsSEction .productInfo .icon svg {
 .productDetailsSEction .productInfo .row .col-sm-9 span .row, .tags {
   margin-bottom: 0 !important;}
 
-body.dark .tags li span{
-  background: #121d37;
-  padding: 3px 10px !important;}
 .tags li span {
   background: #d8d8d8 !important;
   color: #000 !important;
