--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,8 @@
 body{
   font-family: "Open Sans", sans-serif !important;
   background: #ebe9e9;
-  overflow-x: hidden;}
+  overflow-x: hidden;
+  color: #212529;}
 
 ::-webkit-scrollbar{
   width: 5px !important;
@@ -182,6 +183,7 @@ body.dark .breadcrumb-link { background-color: #112143; color: #bfced3 !importan
 body.dark .breadcrumb-current { background-color: #112143; color: #c0d0d4 !important;}
 body.dark .productDetailsSEction .productInfo .name { color: #fffc !important;}
 body.dark .tags li span{ background: #121d37; padding: 3px 10px !important;}
+body.dark .ratingSection .ratingrow .progress { background-color: #000 !important;}
 .link.color, .link:hover {
   color: #0858f7 !important;}
 
@@ -883,7 +885,7 @@ table td .new, table td .old {
   border-radius: 6px;
   transition: none !important;}
 .thumbnail-item.active {
-  border: 2px dashed #007bff !important;
+  border: 2px dashed #001aff !important;
   box-shadow: none;}
 
 body.dark .thumbnail-item {
@@ -926,3 +928,44 @@ body.light .productDetailsSEction .productInfo .icon svg {
   justify-content: center !important;
   border-radius: 5px;
   font-size: 12px !important;}
+
+
+.ratingSection {
+  width: 500px;}
+.ratingSection .ratingrow {
+  margin-bottom: 15px !important;
+  width: 100%;}
+.ratingSection .ratingrow .col1 {
+  display: flex;
+  flex: 0 0 15%;
+  width: 15%;}
+.ratingSection .ratingrow .col2 {
+  flex: 0 0 50%;
+  width: 50%;}
+.progress {
+  background-color: #e9ecef;
+  border-radius: .25rem;
+  font-size: .75rem;
+  height: 1rem;
+  line-height: 0;}
+.progress, .progress-bar {
+  display: flex;
+  overflow: hidden;}
+.ratingSection .ratingrow .progress {
+  background: #ccc !important;
+  height: 5px !important;}
+.progress-bar {
+  background-color: #007bff;
+  color: #fff;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+  transition: width .6s ease;
+  white-space: nowrap;}
+.ratingSection .ratingrow .progress .progress-bar {
+  background: #edb213 !important;}
+.ratingSection .ratingrow .col3 {
+  display: flex;
+  flex: 0 0 25%;
+  padding-left: 20px;
+  width: 25%;}
