--- a/src/App.css
+++ b/src/App.css
@@ -159,7 +159,7 @@ body.dark .signUpSection .loginBox { background: #1b2b4d !important; }
 body.dark .signUpSection .card { border: transparent !important; }
 body.dark .card { border: 1px solid #10214b !important; transition: background-color 0.2s ease; }
 body.dark .dropdown-select { background: transparent !important; border: 2px solid rgba(228, 218, 218, 0.603); color: #fffc; }
-body.dark .dropdown-select:hover { border-color: #de2fff;}
+body.dark .dropdown-select:hover { border-color: #007bff !important;}
 body.dark .dropdown-menu { background: #12254e !important; border: none !important; }
 body.dark table,
 body.dark table th,
@@ -1042,3 +1042,8 @@ textarea {
 
 .card {
   overflow: visible !important;}
+.dropdown-select.Upload {
+  height: 50px;
+  margin-top: -5px;}
+.dropdown-menu.Upload {
+  margin-top: 5px;}
