--- a/src/App.css
+++ b/src/App.css
@@ -44,6 +44,9 @@ body:not(.dark) .main .sidebarWrapper .sidebar ul li button:hover {
 .btn-big{
   padding: 10px 25px !important;
   font-size: 16px !important;}
+.btn-big svg{
+  font-size: 25px !important;
+  margin-left: 7px;}
 .btn-round{
   border-radius: 30px !important;}
 
