--- a/src/App.css
+++ b/src/App.css
@@ -193,6 +193,8 @@ body.dark .reviewForm textarea { background: #132345 !important; border: 1px sol
 body.dark .reviewForm textarea{ color: rgba(255, 255, 255, 0.5) !important; }
 body.dark .form .form-group input, 
 body.dark .form .form-group textarea { background: #2b3c5f !important; border: 1px solid #253557 !important; color: #fffc !important;}
+body.dark .imgUploadBox .uploadBox { border: 1px dashed #fff3; background: #2b3c5f; }
+body.dark .imgUploadBox .uploadBox * { color: #ffffffb3 !important; }
 
 .link.color, .link:hover {
   color: #0858f7 !important;}
@@ -1050,3 +1052,75 @@ textarea {
   margin-top: -5px;}
 .dropdown-menu.Upload {
   margin-top: 5px;}
+
+.imgUploadBox {
+  flex-wrap: nowrap;
+  gap: 10px;
+  width: 100%;}
+.imgUploadBox .uploadBox {
+  align-items: center;
+  background: #fafafa;
+  border: 1px dashed #0000004d;
+  border-radius: 10px;
+  cursor: pointer;
+  display: flex;
+  height: 150px !important;
+  justify-content: center;
+  padding: 0;
+  position: relative;
+  transition: all .3s;
+  width: 150px;}
+.imgUploadBox .uploadBox .remove {
+  align-items: center;
+  background: #d32f2f;
+  border-radius: 50%;
+  cursor: pointer;
+  display: flex;
+  height: 20px;
+  justify-content: center;
+  position: absolute;
+  right: -7px;
+  top: -7px;
+  width: 20px;
+  z-index: 100;}
+.imgUploadBox .uploadBox .remove svg {
+  color: #fff;
+  font-size: 18px;}
+.imgUploadBox .uploadBox .box {
+  border-radius: 7px;
+  height: 150px !important;
+  overflow: hidden;
+  padding: 2px;
+  width: 100%;}
+.imgUploadBox .uploadBox:hover {
+  background: #f1f1f1;}
+.imgUploadBox .uploadBox img {
+  height: 100%;
+  object-fit: cover;}
+.imgUploadBox .uploadBox .box .lazy-load-image-background {
+  height: 100% !important;
+  width: 100% !important;}
+.lazy-load-image-background.blur.lazy-load-image-loaded {
+  filter: blur(0);
+  transition: filter .3s;}
+.lazy-load-image-background.blur.lazy-load-image-loaded>img {
+  opacity: 1;
+  transition: opacity .3s;}
+.imgUploadBox .uploadBox input {
+  height: 100%;
+  opacity: 0;
+  position: absolute;
+  width: 100%;}
+.imgUploadBox .uploadBox .info {
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  pointer-events: none;}
+.imgUploadBox .uploadBox .info svg {
+  font-size: 50px;
+  opacity: .2;}
+.imgUploadBox .uploadBox .info h5 {
+  font-size: 15px;
+  opacity: .5;
+  text-align: center;}
